--- a/projetos/abp-site/assets/CSS/style.css
+++ b/projetos/abp-site/assets/CSS/style.css
@@ -1,7 +1,7 @@
 /* assets/css/style.css */
 
 body {
-  background-color: red;
+  background-color: red;  /* Define o fundo do body como vermelho */
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
