--- a/index.css
+++ b/index.css
@@ -6,6 +6,7 @@ body {
   color: #333;
   transition: background-color 0.3s, color 0.3s;
   padding-bottom: 80px;
+  padding-top: 70px; /* Ajuste conforme a altura da sua navbar */
 }
 body.dark { background-color: #121212; color: #f1f1f1; }
 
