--- a/index.css
+++ b/index.css
@@ -38,6 +38,18 @@ header p { font-size: 1.5em; margin-top: 10px; color: #a8b2d1; }
   color: white !important;
 }
 
+
+#filterCategory, .form-select {
+  background-color: #ffe066 !important;
+  color: #333 !important;
+  border-color: #ffca3a !important;
+}
+#filterCategory:focus, .form-select:focus {
+  box-shadow: 0 0 0 2px #ffd70033;
+  border-color: #ffd700 !important;
+}
+
+
 /* CARDS ITENS/LOJA */
 #itemContainer .card {
   height: 100%;
