--- a/assets/erp/src/views/entidadeView.html
+++ b/assets/erp/src/views/entidadeView.html
@@ -32,9 +32,18 @@
         </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <script src="../../config/supabase_config.js"></script>
-    <script src="../models/entidadeModel.js"></script>
-    <script src="../controllers/entidadeController.js"></script>
-</body>
+    
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+
+<script src="../../config/supabase_config.js"></script>
+
+<script src="../models/entidadeModel.js"></script>
+
+<script src="../controllers/entidadeController.js"></script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+
+
+    
+    </body>
 </html>
