--- a/assets/erp/src/views/entidadeView.html
+++ b/assets/erp/src/views/entidadeView.html
@@ -37,11 +37,8 @@
 
 <script src="../../config/supabase_config.js"></script>
 
-<script src="../models/entidadeModel.js"></script>
-
-<script src="../controllers/entidadeController.js"></script>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+<script src="../model/entidadeModel.js"></script>
+<script src="../controller/entidadeController.js"></script>
 
 
     
