Update and rename entidades.html to entidades_view.html

--- a/assets/erp/src/views/entidades_view.html
+++ b/assets/erp/src/views/entidades_view.html
@@ -118,8 +118,8 @@
 
     <script src="../../config/supabase_config.js"></script>
 
-    <script src="../model/entidadeModel.js"></script>
+    <script src="../model/entidade_model.js"></script>
 
-    <script src="../controller/entidadeController.js"></script>
+    <script src="../controller/entidade_controller.js"></script>
     </body>
 </html>
