--- a/assets/erp/src/view/entidades.html
+++ b/assets/erp/src/view/entidades.html
@@ -17,11 +17,15 @@
 
   <!-- Navbar -->
   <div id="navbar"></div>
+   <script src="../controllers/navbar.js"></script>
 
   <!-- Conteúdo da página -->
   <div id="form_entidades"></div>
+   <script src="../controllers/entidades_form.js"></script>
+  
   <div id="lista_entidades"></div>
-
+ <script src="../controllers/entidades_list.js"></script>
+  
   <!-- Controller -->
   <script src="../controllers/EntidadeController.js"></script>
 
