--- a/assets/erp/src/view/entidades.html
+++ b/assets/erp/src/view/entidades.html
@@ -17,17 +17,18 @@
 
   <!-- Navbar -->
   <div id="navbar"></div>
-   <script src="../controllers/navbar.js"></script>
+  <script src="../src/controller/navbar.js"></script>
 
-  <!-- Conteúdo da página -->
+  <!-- Formulário -->
   <div id="form_entidades"></div>
-   <script src="../controllers/entidades_form.js"></script>
-  
+  <script src="../src/controller/entidades_form.js"></script>
+
+  <!-- Lista -->
   <div id="lista_entidades"></div>
- <script src="../controllers/entidades_list.js"></script>
-  
-  <!-- Controller -->
-  <script src="../controllers/EntidadeController.js"></script>
+  <script src="../src/controller/entidades_list.js"></script>
+
+  <!-- Controller principal -->
+  <script src="../src/controller/controller_entidades.js"></script>
 
 </body>
 </html>
