--- a/assets/erp/src/view/entidades.html
+++ b/assets/erp/src/view/entidades.html
@@ -8,8 +8,11 @@
   <!-- Estilos -->
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../assets/style/style_entidades.css">
-  <link rel="stylesheet" href="../assets/style/style_navbar.css">
+
+  <!-- CSS locais -->
+  <link rel="stylesheet" href="../../assets/style/style_entidades.css">
+  <link rel="stylesheet" href="../../assets/style/style_navbar.css">
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 
@@ -17,18 +20,18 @@
 
   <!-- Navbar -->
   <div id="navbar"></div>
-  <script src="../src/controller/navbar.js"></script>
+  <script src="../controller/navbar.js"></script>
 
   <!-- Formulário -->
   <div id="form_entidades"></div>
-  <script src="../src/controller/entidades_form.js"></script>
+  <script src="../controller/entidades_form.js"></script>
 
   <!-- Lista -->
   <div id="lista_entidades"></div>
-  <script src="../src/controller/entidades_list.js"></script>
+  <script src="../controller/entidades_list.js"></script>
 
   <!-- Controller principal -->
-  <script src="../src/controller/controller_entidades.js"></script>
+  <script src="../controller/controller_entidades.js"></script>
 
 </body>
 </html>
