--- a/assets/erp/src/view/entidades.html
+++ b/assets/erp/src/view/entidades.html
@@ -8,12 +8,19 @@
   <!-- Estilos -->
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
-
+<!-- ############################################################################# --> 
   <!-- CSS locais -->
   <link rel="stylesheet" href="../../assets/style/style_entidades.css">
   <link rel="stylesheet" href="../../assets/style/style_navbar.css">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+
+<!-- ############################################################################# --> 
+<script src="https://unpkg.com/@supabase/supabase-js@2"></script>     
+<script src="../model/supabase_config.js"></script> 
+<script src="../model/verificar_login.js"></script> 
+<script src="../model/model_entidades.js"></script>   
+  
 </head>
 
 <body class="font-inter">
