--- a/assets/erp/src/view/index.html
+++ b/assets/erp/src/view/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SISTEMA ERP ABP - Inicio</title>
-
+<!-- ############################################################################# --> 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-<link rel="stylesheet" href="assets/style/style_index.css">
-<link rel="stylesheet" href="assets/style/style_navbar.css">  
-
-<script src="https://unpkg.com/@supabase/supabase-js@2"></script>   
-<script src="src/model/supabase_config.js"></script>  
-<script src="src/model/verificar_login.js"></script>  
-
+<link rel="stylesheet" href="../../assets/style/style_index.css">
+<link rel="stylesheet" href="../../assets/style/style_navbar.css">  
+<!-- ############################################################################# --> 
+<script src="https://unpkg.com/@supabase/supabase-js@2"></script>     
+<script src="../model/supabase_config.js"></script> 
+<script src="../model/verificar_login.js"></script> 
+<!-- ############################################################################# --> 
     
 </head>
 <body>
@@ -26,24 +26,24 @@
   <div class="grid">
 
 
-    <a href="src/view/entidades.html" class="card">
+    <a href="entidades.html" class="card">
       <i class="fas fa-users"></i>
       <h3>Gestão de Entidades</h3>
     </a>
 
-    <a href="src/view/financeiro.html" class="card">
+    <a href="financeiro.html" class="card">
       <i class="fas fa-hand-holding-usd"></i>
       <h3>Financeiro</h3>
     </a>
 
-    <a href="src/view/produtos.html" class="card">
+    <a href="produtos.html" class="card">
       <i class="fas fa-box"></i>
       <h3>Produtos</h3>
     </a>
 
  
 
-    <a href="src/view/pdv.html" class="card">
+    <a href="pdv.html" class="card">
       <i class="fas fa-shopping-basket"></i>
       <h3>PDV</h3>
     </a>
