--- a/assets/erp/src/view/index.html
+++ b/assets/erp/src/view/index.html
@@ -17,9 +17,9 @@
 </head>
 <body>
     
-<!-- NAVBAR -->
-<div id="navbar"></div>
-<script src="src/controller/navbar.js"></script>
+ <!-- Navbar -->
+  <div id="navbar"></div>
+  <script src="../controller/navbar.js"></script>
 
 <!-- CONTEÚDO DA PÁGINA -->
 <div class="content">      
