--- a/assets/erp/src/view/login.html
+++ b/assets/erp/src/view/login.html
@@ -17,7 +17,7 @@
 
 <!-- ############################################################################# --> 
 <script src="https://unpkg.com/@supabase/supabase-js@2"></script>     
-<script src="../model/supabase_config.js"></script> 
+<script src="../../config/supabase_config.js"></script> 
 <script src="../controller/login.js"></script>   
   
 </head>
