--- a/assets/erp/src/view/index.html
+++ b/assets/erp/src/view/index.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" href="../../assets/style/style_navbar.css">  
 <!-- ############################################################################# --> 
 <script src="https://unpkg.com/@supabase/supabase-js@2"></script>     
-<script src="../model/supabase_config.js"></script> 
+<script src="../../config/supabase_config.js"></script> 
 <script src="../model/verificar_login.js"></script> 
 <!-- ############################################################################# --> 
     
