--- a/assets/erp/src/view/index.html
+++ b/assets/erp/src/view/index.html
@@ -25,7 +25,10 @@
 <div class="content">      
   <div class="grid">
 
-
+   <a href="usuarios.html" class="card">
+      <i class="fas fa-users"></i>
+      <h3>Gestão de usuarios</h3>
+    </a>
     <a href="entidades.html" class="card">
       <i class="fas fa-users"></i>
       <h3>Gestão de Entidades</h3>
