--- a/assets/erp/src/view/usuario.html
+++ b/assets/erp/src/view/usuario.html
@@ -15,6 +15,15 @@
 
 <body class="bg-slate-950 text-white min-h-screen p-8">
 
+
+  <!-- Navbar -->
+  <link rel="stylesheet" href="../../assets/style/style_navbar.css">
+  <div id="navbar"></div>
+  <script src="../controller/navbar.js"></script>
+
+
+
+    
     <div class="max-w-2xl mx-auto bg-slate-900/50 p-8 rounded-2xl border border-slate-800 shadow-xl">
         <div class="mb-8">
             <h1 class="text-3xl font-black text-blue-500">Novo Usuário</h1>
